--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "slim/slim": "3.*",
         "firebase/php-jwt": "^5.2",
-        "tuupola/slim-jwt-auth": "^3.5"
+        "tuupola/slim-jwt-auth": "^3.5",
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload":{
         "psr-4": {
